[package]
name = "close-file"
description = "Allows to close a file without silently dropping errors"
version = "0.1.1"
authors = ["André Hänsel <andre@webkr.de>"]
edition = "2018"
license = "MIT"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"
kernel32-sys = "0.2.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.68"